<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingLeft="10dp"
    android:paddingTop="2dp"
    android:textStyle="bold">

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/trLocatie_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbLocatie_id"
                android:layout_width="@dimen/width_column_labels"
                android:layout_height="wrap_content"
                android:text="@string/location_id" />

            <TextView
                android:id="@+id/tvLocatie_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/trLocatie_omschrijving"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbLocatie_omschrijving"
                android:layout_width="@dimen/width_column_labels"
                android:layout_height="wrap_content"
                android:text="@string/locdescription" />

            <TextView
                android:id="@+id/tvLocatie_omschrijving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/trLocatie_lgraad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbLocatie_lgraad"
                android:layout_width="@dimen/width_column_labels"
                android:layout_height="wrap_content"
                android:text="@string/loclongitude" />

            <TextView
                android:id="@+id/tvLocatie_lgraad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/trLocatie_bgraad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbLocatie_bgraad"
                android:layout_width="@dimen/width_column_labels"
                android:layout_height="wrap_content"
                android:text="@string/loclatitude" />

            <TextView
                android:id="@+id/tvLocatie_bgraad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
</LinearLayout>