<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundmain"
    android:paddingLeft="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llBeheerSP"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_column_labels"
                    android:layout_height="wrap_content"
                    android:text="@string/location_id" />

                <TextView
                    android:id="@+id/etLocatieId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_column_labels"
                    android:layout_height="wrap_content"
                    android:text="@string/locdescription" />

                <EditText
                    android:id="@+id/etOmschrijving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="textCapSentences" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_column_labels"
                    android:layout_height="wrap_content"
                    android:text="@string/loclongitude" />

                <EditText
                    android:id="@+id/etLgraad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="textCapSentences" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_column_labels"
                    android:layout_height="wrap_content"
                    android:text="@string/loclatitude" />

                <EditText
                    android:id="@+id/etBgraad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:inputType="textCapSentences" />
            </TableRow>


        </LinearLayout>
    </ScrollView>


</LinearLayout>